refactor(solution): reorganize project structure and update solution file
Moved C# example files to a new directory structure under '01-GetStarted', updated the Visual Studio solution file with new paths, added UserSecretsId to the project file, and deleted an obsolete solution file.

--- a/01-GetStarted/01-TourCsharp/TourCsharp.csproj
+++ b/01-GetStarted/01-TourCsharp/TourCsharp.csproj
@@ -1,10 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>45fb8675-2dcd-4891-967c-e96cc305c516</UserSecretsId>
   </PropertyGroup>
-
 </Project>
